@@ -1324,75 +1324,40 @@ getAddrspaceiCode (const iCode *ic)
   return (addrspace);
 }
 
+void
+switchAddressSpaceAt (iCode *ic)
+{
+  const symbol *const addrspace = getAddrspaceiCode (ic);
+  iCode *newic = newiCode (CALL, operandFromSymbol (addrspace->addressmod[0]), 0);
+
+  IC_RESULT (newic) = newiTempOperand (newVoidLink (), 1);
+  newic->filename = ic->filename;
+  newic->lineno = ic->lineno;
+
+  newic->next = ic;
+  newic->prev = ic->prev;
+  if (ic->prev)
+    ic->prev->next = newic;
+  ic->prev = newic;
+}
+
 /*-----------------------------------------------------------------*/
 /* switchAddressSpaces - insert instructions for bank switching    */
+/* This is just a fallback, in case the optimal approach fails -   */
+/* improbable, but possible depending on sdcc options and code.    */
 /*-----------------------------------------------------------------*/
 static void
 switchAddressSpaces (iCode *ic)
 {
   const symbol *oldaddrspace = 0;
 
-  /* TODO: Do this optimally (will probably require use of tree-decompositions). */
   for (; ic; ic = ic->next)
     {
-      iCode *newic;
-      operand *left, *right, *result;
-      const symbol *leftaddrspace = 0, *rightaddrspace = 0, *resultaddrspace = 0;
-      const symbol *addrspace = 0;
-      
-      left = IC_LEFT (ic);
-      right = IC_RIGHT (ic);
-      result = IC_RESULT (ic);
-
-      /* Previous transformations in separateAddressSpaces() should
-         ensure that at most one addressspace occours in each iCode. */
-       if (left && IS_SYMOP (left))
-            { 
-              if (POINTER_GET (ic))
-                {
-                  assert (!(IS_DECL (OP_SYMBOL (left)->type) && DCL_PTR_ADDRSPACE (OP_SYMBOL (left)->type)));
-                  leftaddrspace = getAddrspace (OP_SYMBOL (left)->type->next);
-                }
-              else
-                leftaddrspace = getAddrspace (OP_SYMBOL (left)->type);
-            }
-          if (right && IS_SYMOP (right))
-            rightaddrspace = getAddrspace (OP_SYMBOL (right)->type);
-          if (result && IS_SYMOP (result))
-            { 
-              if (POINTER_SET (ic))
-                {
-                  assert (!(IS_DECL (OP_SYMBOL (result)->type) && DCL_PTR_ADDRSPACE (OP_SYMBOL (result)->type)));
-                  resultaddrspace = getAddrspace (OP_SYMBOL (result)->type->next);
-                }
-              else
-                resultaddrspace = getAddrspace (OP_SYMBOL (result)->type);
-            }
-            
-      addrspace = leftaddrspace;
-      if (rightaddrspace)
-        {
-          wassertl (!addrspace || addrspace == rightaddrspace, "Multiple named address spaces in icode");
-          addrspace = rightaddrspace;
-        }
-      if (resultaddrspace)
-        {
-          wassertl (!addrspace || addrspace == resultaddrspace, "Multiple named address spaces in icode");
-          addrspace = resultaddrspace;
-        }
+      const symbol *const addrspace = getAddrspaceiCode (ic);
  
       if (addrspace && addrspace != oldaddrspace)
         { 
-          newic = newiCode (CALL, operandFromSymbol (addrspace->addressmod[0]), 0);
-          IC_RESULT (newic) = newiTempOperand (newVoidLink (), 1);
-          newic->filename = ic->filename;
-          newic->lineno = ic->lineno;
-
-          newic->next = ic;
-          newic->prev = ic->prev;
-          if (ic->prev)
-            ic->prev->next = newic;
-          ic->prev = newic;
+          switchAddressSpaceAt (ic);
           
           oldaddrspace = addrspace;
         }
