@@ -1,5 +1,12 @@
 2011-01-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCnaddr.hpp,
+	  src/SDCCopt.c,
+	  src/SDCCopt.h:
+	  Optimal placement of bank-switching calls.
+
+2011-01-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCicode.h,
 	  src/SDCCnaddr.cc,
 	  src/SDCCnaddr.hpp,
@@ -7,7 +14,7 @@
 	  src/z80/ralloc2.cc,
 	  src/SDCCopt.h,
 	  src/Makefile.in:
-	  Preparations for optimal placement of bank switching calls.
+	  Preparations for optimal placement of bank-switching calls.
 
 2011-01-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
